<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SejarahActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include
                        android:id="@+id/toolbar"
                        layout="@layout/toolbar" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.synnapps.carouselview.CarouselView
                            android:id="@+id/carouselView"
                            android:layout_width="match_parent"
                            android:layout_height="220dp"
                            app:animateOnBoundary="true"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginTop="20dp"
                            app:autoPlay="true">

                        </com.synnapps.carouselview.CarouselView>

                        <androidx.cardview.widget.CardView
                            android:layout_margin="15dp"
                            app:cardBackgroundColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_margin="5dp"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_margin="5dp"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <com.uncopt.android.widget.text.justify.JustifiedTextView
                                    android:layout_marginStart="5dp"
                                    android:layout_marginEnd="5dp"
                                    android:layout_marginBottom="20dp"
                                    android:id="@+id/txtSejarah1"
                                    android:text="@string/sejarahEnde1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />

                                <com.uncopt.android.widget.text.justify.JustifiedTextView
                                    android:id="@+id/txtSejarah2"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginEnd="5dp"
                                    android:layout_marginBottom="20dp"
                                    android:text="@string/sejarahEnde2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />

                                <com.uncopt.android.widget.text.justify.JustifiedTextView
                                    android:id="@+id/txtSejarah3"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginEnd="5dp"
                                    android:layout_marginBottom="5dp"
                                    android:text="@string/sejarahEnde3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />


                            </LinearLayout>

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </FrameLayout>

    </FrameLayout>

</LinearLayout>