<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Musik1Activity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/background"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.synnapps.carouselview.CarouselView
                            android:id="@+id/carouselView"
                            android:layout_width="match_parent"
                            android:layout_height="220dp"
                            app:animateOnBoundary="true"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginTop="20dp"
                            app:autoPlay="true">

                        </com.synnapps.carouselview.CarouselView>

                        <androidx.cardview.widget.CardView
                            android:layout_margin="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_margin="5dp"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <androidx.cardview.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                <LinearLayout
                                    android:layout_margin="5dp"
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <com.uncopt.android.widget.text.justify.JustifiedTextView
                                        android:layout_marginStart="5dp"
                                        android:layout_marginEnd="5dp"
                                        android:layout_marginBottom="20dp"
                                        android:textSize="18sp"
                                        android:textColor="#000"
                                        android:textAlignment="center"
                                        android:id="@+id/txtMusik"
                                        android:text="Sato"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />

                                    <com.uncopt.android.widget.text.justify.JustifiedTextView
                                        android:layout_marginStart="5dp"
                                        android:layout_marginEnd="5dp"
                                        android:id="@+id/txtMusik1"
                                        android:textSize="16sp"
                                        android:textColor="#000"
                                        android:text="@string/musik1"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />

                                    <com.uncopt.android.widget.text.justify.JustifiedTextView
                                        android:layout_marginTop="20dp"
                                        android:layout_marginStart="5dp"
                                        android:layout_marginEnd="5dp"
                                        android:id="@+id/txtMusik2"
                                        android:textSize="16sp"
                                        android:textColor="#000"
                                        android:text="@string/musik2"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />

                                    <com.uncopt.android.widget.text.justify.JustifiedTextView
                                        android:layout_marginTop="20dp"
                                        android:layout_marginStart="5dp"
                                        android:layout_marginEnd="5dp"
                                        android:id="@+id/txtMusik3"
                                        android:textSize="16sp"
                                        android:textColor="#000"
                                        android:text="@string/musik3"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />

                                    <com.uncopt.android.widget.text.justify.JustifiedTextView
                                        android:layout_marginTop="20dp"
                                        android:layout_marginStart="5dp"
                                        android:layout_marginEnd="5dp"
                                        android:layout_marginBottom="5dp"
                                        android:id="@+id/txtMusik4"
                                        android:textSize="16sp"
                                        android:textColor="#000"
                                        android:text="@string/musik4"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />

                                </LinearLayout>

                                </androidx.cardview.widget.CardView>

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </FrameLayout>

    </FrameLayout>

</LinearLayout>